<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/screenbg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:src="@drawable/shop_logo"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_message"
            android:textSize="22sp"
            android:layout_marginTop="30dp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/colorDarkRed"
            android:layout_marginBottom="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/userFirstNameWrapper">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userFirstName"
                android:inputType="text"
                android:hint="@string/first_name"
                android:textColor="@color/colorRed"
                android:textSize="18sp"
                android:textColorHint="@color/colorRed"
                />
        </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/userLastNameWrapper">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userLastName"
                    android:inputType="text"
                    android:hint="@string/last_name"
                    android:textColor="@color/colorRed"
                    android:textSize="18sp"
                    android:textColorHint="@color/colorRed"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/userEmailAddressWrapper">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userEmailAddress"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"
                android:textColor="@color/colorRed"
                android:textSize="18sp"
                android:textColorHint="@color/colorRed"
                />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/passwordWrapper">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userPassword"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textColor="@color/colorRed"
                    android:textSize="18sp"
                    android:textColorHint="@color/colorRed"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/userConfPasswordWrapper">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userConfPassword"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    android:textColor="@color/colorRed"
                    android:textSize="18sp"
                    android:textColorHint="@color/colorRed"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userContactNoWrapper">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userContactNumber"
                android:inputType="phone"
                android:hint="@string/contact_number"
                android:textColor="@color/colorRed"
                android:textSize="18sp"
                android:textColorHint="@color/colorRed"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:text="@string/btn_register"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btnsignupbg"
            android:textSize="20sp"/>

    </LinearLayout>


</LinearLayout>